add api get all review of provider
